--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>view.GUI.View</mainClass>
+                    <mainClass>Main.main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
